# cs2shock-XPERIMENT

./: .gitignore  Cargo.toml  GITHUB_ACTIONS_SETUP.md  README.md  RELEASE.md  config.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: api.rs  config.rs  gamestateintegration.rs  gui.rs  main.rs  openshock.rs
