[package]
name = "cs2shock"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
axum-macros = "0.5"
config-file = "0.2.3"
eframe = "0.33.3"
egui = "0.33.3"
log = "0.4"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "5.0"
time = "0.3"
tokio = { version = "1.40", features = ["full"] }
